Closed Bug 1446272 Opened 6 years ago Closed 6 years ago

Solaris: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox61 --- fixed

People

(Reporter: petr.sumbera, Assigned: petr.sumbera)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:59.0) Gecko/20100101 Firefox/59.0
Build ID: 20180310025718

Steps to reproduce:

This is on Solaris/intel/64-bit (Firefox 61.0a). Firefox is running but not everything loads. Here is what I see on console: 

JavaScript warning: https://www.novinky.cz/static/js/novinky_all.js?c1711ae, line 1: unreachable code after return statement
JavaScript error: resource://gre/modules/TelemetrySession.jsm, line 1674: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]
JavaScript error: resource://gre/modules/TelemetrySession.jsm, line 1674: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]
JavaScript error: resource://gre/modules/TelemetrySession.jsm, line 1674: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]
JavaScript error: resource://gre/modules/TelemetrySession.jsm, line 1674: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]
JavaScript error: resource://gre/modules/TelemetrySession.jsm, line 1674: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]
JavaScript error: resource://gre/modules/TelemetrySession.jsm, line 1674: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]
ATTENTION: default value of option force_s3tc_enable overridden by environment.
terminate called after throwing an instance of 'std::length_error'
  what():  basic_string::append
Redirecting call to abort() to mozalloc_abort


###!!! [Parent][MessageChannel] Error: (msgtype=0x15007F,name=PBrowser::Msg_Destroy) Channel error: cannot send/recv


###!!! [Parent][MessageChannel] Error: (msgtype=0x1000B,name=PAPZ::Msg_Destroy) Channel error: cannot send/recv
Probably a duplicate of bug 1384743.
Hi Petr,

Could you please take and post a performance profile using https://perf-html.io/ as you are reproducing this issue?
Also could you please post a memory report from about:memory?

And lastly, is this issue reproducible on the 59 version of Nightly as well?
Flags: needinfo?(petr.sumbera)
about:memory report following warnings. It's after I tried to implement ResidentUniqueDistinguishedAmount (I no longer see nsIMemoryReporterManager.residentUnique error).

WARNING: the 'heap-allocated' memory reporter and the moz_malloc_usable_size() function do not work for this platform and/or configuration. This means that 'heap-unclassified' is not shown and the 'explicit' tree shows much less memory than it should.

WARNING: the following values are negative or unreasonably large.

    explicit/window-objects/top(chrome://browser/content/browser.xul, id=3)/active/window(chrome://browser/content/browser.xul)/layout/pres-shell
    explicit/window-objects/(4 tiny)/top(chrome://extensions/content/dummy.xul, id=10)/active/window(chrome://extensions/content/dummy.xul)/layout/pres-shell
    explicit/window-objects/(4 tiny)/top(resource://gre-resources/hiddenWindow.html, id=1)/active/window(resource://gre-resources/hiddenWindow.html)/layout/pres-shell
    explicit/window-objects/(4 tiny)/top(about:memory, id=20)/active/window(about:memory)/layout/pres-shell
    explicit/window-objects/top(chrome://global/content/backgroundPageThumbs.xhtml, id=17)/active/window(chrome://global/content/backgroundPageThumbs.xhtml)/layout/pres-shell
    explicit/add-ons/(9 tiny)/screenshots@mozilla.org/window-objects/top(moz-extension://699b55bd-467c-4705-9dbf-7477d7032700/_generated_background_page.html, id=14)/active/window(moz-extension://699b55bd-467c-4705-9dbf-7477d7032700/_generated_background_page.html)/layout/pres-shell
    window-objects/layout/frames
    window-objects/layout/line-boxes
    window-objects/layout/pres-shell 

This indicates a defect in one or more memory reporters. The invalid values are highlighted. 

...

\u251c\u2500\u2500\u25003.62 MB (08.67%) -- window-objects
\u2502   \u251c\u2500\u25002.42 MB (05.80%) -- top(chrome://browser/content/browser.xul, id=3)
\u2502   \u2502  \u251c\u2500\u25001.24 MB (02.96%) -- active
\u2502   \u2502  \u2502  \u251c\u2500\u25001.18 MB (02.82%) -- window(chrome://browser/content/browser.xul)
\u2502   \u2502  \u2502  \u2502  \u251c\u2500\u25001.18 MB (02.82%) -- js-compartment([System Principal], about:blank)
\u2502   \u2502  \u2502  \u2502  \u2502  \u251c\u2500\u25000.80 MB (01.92%) -- classes
\u2502   \u2502  \u2502  \u2502  \u2502  \u2502  \u251c\u2500\u25000.61 MB (01.47%) \u2500\u2500 class(Function)/objects/gc-heap
\u2502   \u2502  \u2502  \u2502  \u2502  \u2502  \u2514\u2500\u25000.19 MB (00.45%) ++ (4 tiny)
\u2502   \u2502  \u2502  \u2502  \u2502  \u2514\u2500\u25000.38 MB (00.91%) \u2500\u2500 scripts/gc-heap
\u2502   \u2502  \u2502  \u2502  \u2514\u2500\u25000.00 MB (00.00%) -- layout
\u2502   \u2502  \u2502  \u2502     \u251c\u2500\u25000.07 MB (00.17%) ++ frames
\u2502   \u2502  \u2502  \u2502     \u251c\u2500\u25000.00 MB (00.00%) \u2500\u2500 line-boxes
\u2502   \u2502  \u2502  \u2502     \u2514\u2500\u2500-0.07 MB (-0.17%) \u2500\u2500 pres-shell [?!]
...

Is there any special reason to test with 59?

Note that I plan to use this bug for providing ResidentUniqueDistinguishedAmount on Solaris.
Flags: needinfo?(petr.sumbera)
(In reply to Petr Sumbera from comment #3)
 
> Is there any special reason to test with 59?

I've asked this to see if the issue wasn't reproducible on an older version and if it isn't, could you please try to find a regression range using Mozregression tool? (Information on the tool is available at http://mozilla.github.io/mozregression/.)

Also, is this issue reproducible with a clean new profile?
Flags: needinfo?(petr.sumbera)
Attached patch Bug1446272.patchSplinter Review
Flags: needinfo?(petr.sumbera)
Attachment #8961353 - Flags: review?(nfroyd)
Note please that this bug shall cover just "(NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]" which is caused by missing ResidentDistinguishedAmount() on Solaris. So this cannot be considered as regression. Other mentioned issues should be handled separately.
Comment on attachment 8961353 [details] [diff] [review]
Bug1446272.patch

Review of attachment 8961353 [details] [diff] [review]:
-----------------------------------------------------------------

WFM!
Attachment #8961353 - Flags: review?(nfroyd) → review+
Assignee: nobody → petr.sumbera
Status: UNCONFIRMED → ASSIGNED
Component: Untriaged → XPCOM
Ever confirmed: true
Product: Firefox → Core
Keywords: checkin-needed
Summary: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique] → Solaris: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIMemoryReporterManager.residentUnique]
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/0d43e100b200
Provide ResidentUniqueDistinguishedAmount() for Solaris. r=froydnj
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/0d43e100b200
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: