Bug 1446272 - Provide ResidentUniqueDistinguishedAmount() for Solaris. r=froydnj