xpcom/base/nsMemoryReporterManager.cpp
@@ -332,10 +332,11 @@ VsizeMaxContiguousDistinguishedAmount(int64_t* aN)
 #include <unistd.h>
 
 static void
-XMappingIter(int64_t& aVsize, int64_t& aResident)
+XMappingIter(int64_t& aVsize, int64_t& aResident, int64_t& aShared)
 {
   aVsize = -1;
   aResident = -1;
+  aShared = -1;
   int mapfd = open("/proc/self/xmap", O_RDONLY);
   struct stat st;
   prxmap_t* prmapp = nullptr;
@@ -359,9 +360,13 @@ XMappingIter(int64_t& aVsize, int64_t& aResident)
         if (nmap >= n / sizeof(prxmap_t)) {
           aVsize = 0;
           aResident = 0;
+          aShared = 0;
           for (int i = 0; i < n / sizeof(prxmap_t); i++) {
             aVsize += prmapp[i].pr_size;
             aResident += prmapp[i].pr_rss * prmapp[i].pr_pagesize;
+            if (prmapp[i].pr_mflags & MA_SHARED) {
+              aShared += prmapp[i].pr_rss * prmapp[i].pr_pagesize;
+            }
           }
           break;
         }
@@ -377,8 +382,8 @@ XMappingIter(int64_t& aVsize, int64_t& aResident)
 static MOZ_MUST_USE nsresult
 VsizeDistinguishedAmount(int64_t* aN)
 {
-  int64_t vsize, resident;
-  XMappingIter(vsize, resident);
+  int64_t vsize, resident, shared;
+  XMappingIter(vsize, resident, shared);
   if (vsize == -1) {
     return NS_ERROR_FAILURE;
   }
@@ -389,8 +394,8 @@ VsizeDistinguishedAmount(int64_t* aN)
 static MOZ_MUST_USE nsresult
 ResidentDistinguishedAmount(int64_t* aN)
 {
-  int64_t vsize, resident;
-  XMappingIter(vsize, resident);
+  int64_t vsize, resident, shared;
+  XMappingIter(vsize, resident, shared);
   if (resident == -1) {
     return NS_ERROR_FAILURE;
   }
@@ -402,6 +407,19 @@ static MOZ_MUST_USE nsresult
 ResidentFastDistinguishedAmount(int64_t* aN)
 {
   return ResidentDistinguishedAmount(aN);
+}
+
+#define HAVE_RESIDENT_UNIQUE_REPORTER 1
+static MOZ_MUST_USE nsresult
+ResidentUniqueDistinguishedAmount(int64_t* aN)
+{
+  int64_t vsize, resident, shared;
+  XMappingIter(vsize, resident, shared);
+  if (resident == -1) {
+    return NS_ERROR_FAILURE;
+  }
+  *aN = resident - shared;
+  return NS_OK;
 }
 
 #elif defined(XP_MACOSX)
